--- a/Tu_Jardin_App/Server/appsettings.json
+++ b/Tu_Jardin_App/Server/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-NIP8OHD\\SQLEXPRESS;Initial Catalog=Tu_Jardin_App;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DefaultConnection": ""
   },
     "IdentityServer": {
       "Clients": {
@@ -18,10 +18,10 @@
       }
     },
   "SendGrid": {
-    "APIKey": "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"
+    "APIKey": ""
   },
   "AppSettings": {
-    "AppMail": "solnarux@gmail.com",
+    "AppMail": "",
     "AppUserName": "Tu Jardin App"
   }
   }
